[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reexpastar"
version = "0.1.0"
description = "Weighted A* variants with conditional re-expansion (CR), NR, AR, and ARA*; with benchmarks & scenarios."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Tien Minh Dam" }]
keywords = ["search", "path-planning", "A*", "ARA*", "heuristics", "benchmark"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff", "black", "pre-commit"]
plot = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/damminhtien/reexpastar"
Issues = "https://github.com/damminhtien/reexpastar/issues"

[project.scripts]
reexpastar-compare = "reexpastar.cli.compare:main"
reexpastar-ablate = "reexpastar.cli.ablate:main"
reexpastar-benchmark = "reexpastar.cli.benchmark:main"
reexpastar-benchmark-par = "reexpastar.cli.benchmark_parallel:main"
reexpastar-plot = "reexpastar.cli.plot_results:main"
reexpastar-profile = "reexpastar.cli.profile_search:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
# Lint + import sorting + modernizations + bugbears
lint.select = ["E","F","I","UP","B"]
lint.ignore = []
# Ignore common test conveniences (adjust to taste)
lint.per-file-ignores = { "tests/**" = ["S101","PLR2004"] }

# Import sorting rules
[tool.ruff.lint.isort]
known-first-party = ["your_project"]
combine-as-imports = true
force-sort-within-sections = true

# Formatter (Black-compatible)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "-ra -q"
